index.html - basic content added

--- a/index.html
+++ b/index.html
@@ -9,5 +9,24 @@
 		<!-- JS -->
 		<script defer src="./index.js"></script>
 	</head>
-	<body></body>
+	<body>
+		<div class="app">
+			<header>
+				<nav class="app__navbar">
+					<h1>Color Flipper</h1>
+					<ul>
+						<li>Basic Colors</li>
+						<li>HEX Colors</li>
+					</ul>
+				</nav>
+			</header>
+			<main>
+				<div class="app__body">
+					<h2>Background Color:</h2>
+					<p>Color Value</p>
+					<button>New Random Color</button>
+				</div>
+			</main>
+		</div>
+	</body>
 </html>
