--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 				<nav class="app__navbar">
 					<h1>Color Flipper</h1>
 					<ul>
-						<li>Basic Colors</li>
-						<li>HEX Colors</li>
+						<li>Basic</li>
+						<li>HEX</li>
 					</ul>
 				</nav>
 			</header>
