--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 		<div class="app">
 			<header>
 				<nav class="app__navbar">
-					<h1>Color Flipper</h1>
-					<ul>
-						<li>Basic</li>
-						<li>HEX</li>
+					<h1 class="app__navbar__title">Color Flipper</h1>
+					<ul class="app__navbar__menu">
+						<li class="app__navbar__menu__item active">Basic</li>
+						<li class="app__navbar__menu__item">HEX</li>
 					</ul>
 				</nav>
 			</header>
