--- a/hex.html
+++ b/hex.html
@@ -15,8 +15,8 @@
 				<nav class="app__navbar">
 					<h1 class="app__navbar__title">Color Flipper</h1>
 					<ul class="app__navbar__menu">
-						<li class="app__navbar__menu__item">Basic</li>
-						<li class="app__navbar__menu__item active">HEX</li>
+						<li class="app__navbar__menu__item"><a href="./index.html">Basic</a></li>
+						<li class="app__navbar__menu__item active"><a href="./hex.html">HEX</a></li>
 					</ul>
 				</nav>
 			</header>
