added app functionality

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 			</header>
 			<main>
 				<div class="app__body">
-					<h2>Background Color:</h2>
-					<p>Color Value</p>
-					<button>New Random Color</button>
+					<h2 class="app__body__key">Background Color:</h2>
+					<p class="app__body__value">Color Value Will Be Displayed Here</p>
+					<button class="app__body__btn">New Random Color</button>
 				</div>
 			</main>
 		</div>
