--- a/hex.html
+++ b/hex.html
@@ -3,6 +3,9 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<!-- Favicon -->
+		<link rel="icon" href="./favicon.svg" type="image/x-icon" />
+		<!-- Title -->
 		<title>Color Flipper | HEX Color Flipper</title>
 		<!-- CSS -->
 		<link rel="stylesheet" href="./index.css" />
